--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/VaclavDanek/redux-persist-basic-transform"
+    "url": "https://github.com/VaclavDanek/redux-persist-basic-transform.git"
   },
   "dependencies": {
     "crypto-js": "^4.0.0",
