--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "redux-persist-complex-transform",
-  "version": "1.0.2",
-  "description": "This transform allows filter, encrypt, compress, versioning and expiring persisted data from redux states. Also works with immutable and seamless-immutable data structures.",
+  "version": "1.0.3",
+  "description": "This transform allows filter, encrypt, compress, versioning and expiring persisted data from redux-persist. Also works with immutable and seamless-immutable data structures.",
   "keywords": [
     "redux",
     "redux-persist",
     "redux-persist-transform",
-    "expiration",
     "versioning",
+    "expire",
     "compress",
     "encrypt",
     "immutable",
