--- a/.babelrc
+++ b/.babelrc
@@ -2,12 +2,6 @@
   "presets": [
     "@babel/preset-env",
     "@babel/preset-react",
-  ],
-  "plugins": [
-    "@babel/plugin-proposal-export-default-from",
-    "@babel/plugin-proposal-object-rest-spread",
-    "@babel/plugin-syntax-dynamic-import",
-    "@babel/plugin-transform-runtime",
-    "transform-class-properties"
+    "@babel/preset-typescript"
   ]
 }
