--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
   },
   "main": "dist/index.js",
   "scripts": {
-    "build": "babel lib --out-dir dist",
-    "minify": "minify dist -d dist"
+    "build": "babel lib --out-dir dist --extensions \".ts,.tsx\" && tsc && minify dist -d dist"
   },
   "dependencies": {
     "redux-persist": "^5.4.0"
@@ -42,20 +41,15 @@
     "seamless-immutable": "^7.1.2"
   },
   "devDependencies": {
-    "ajv": "^5.2.2",
     "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-export-default-from": "^7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.3.1",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.3.1",
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "@babel/runtime": "^7.3.1",
-    "babel-loader": "^8.0.5",
+    "@babel/preset-typescript": "^7.21.0",
+    "@types/crypto-js": "^4.1.1",
+    "@types/node": "^18.15.10",
+    "@types/seamless-immutable": "^7.1.16",
     "babel-minify": "^0.5.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "prettier": "^1.16.3"
+    "typescript": "^5.0.2"
   }
 }
